@@ -1,20 +1,20 @@
-9d442e9def91dd4f459c9f282a618abe *DESCRIPTION
+8bb2006ce2485548e5d1b9c39d88678d *DESCRIPTION
 a62319b6c4374fd15963266db928a1fc *NAMESPACE
-2a2086f7bffd18136098553d62ff666c *NEWS
-93ee3e2d66010182711ac711686822b0 *R/squarem.R
+fbff7916cf82707eab9bd5350b9503c2 *NEWS
+4ead5ae1cb6525899c0cb75b1e0e7339 *R/squarem.R
 2ce900a9bc6751f7beb84b79942bbac3 *build/vignette.rds
 4eb525977b2cd840efcd384cada97dff *demo/00Index
-e9d96e883c5df20e8c2d17534694552a *demo/factoranalysis.R
-09c8ce3e8c82d148cf2d3073aaeaaaf2 *demo/intcensoring.R
-1110df9f82effb00b6ac3f9e9f7d008d *demo/mmlogistic.R
-35f1a8868409a54f65372a12f4ef5a6a *demo/poissonmix.R
+99297f5664d508013f345afcecf8d90c *demo/factoranalysis.R
+985ce9e82c3dcab993f32464edf1ad1f *demo/intcensoring.R
+645a2affa1b4c8b04dfe48df16a6db25 *demo/mmlogistic.R
+5e1ac6c0e8d982fd3527aa973e12650d *demo/poissonmix.R
 10ee5e811a748995a8bac01698a4769b *demo/squarem.R
 ac216a9a91116475a6b28b933f34e2b4 *inst/CITATION
 4df21965b20b54fd14215afe50bff3e4 *inst/doc/SQUAREM.R
 8baa991f5faaaabb04be226d2aac8db0 *inst/doc/SQUAREM.Rnw
-dddb0309f524aac4da5b82b942eb2f54 *inst/doc/SQUAREM.pdf
+87ec2678b267ecd99d38567c6937cd25 *inst/doc/SQUAREM.pdf
 028e8abac54c45e3d66ff7d5a54e5ca7 *man/fpiter.Rd
-5e20cf3815fe69aeb603d6ffbda9b82f *man/internal.Rd
-258a315bfe082f8ae2e45f097429e878 *man/squarem.Rd
+dc86f820449b08ca2a684572e599dd55 *man/internal.Rd
+1734baa4947c57dc975c3456d325435c *man/squarem.Rd
 1f6e68e9322bd524f4db846a970670f0 *tests/Hasselblad1969.R
 8baa991f5faaaabb04be226d2aac8db0 *vignettes/SQUAREM.Rnw
